@@ -2,6 +2,7 @@ package com.minizin.travel.config;
 
 import com.minizin.travel.user.auth.LoginFilter;
 import com.minizin.travel.user.jwt.JwtAuthenticationFilter;
+import com.minizin.travel.user.jwt.JwtExceptionFilter;
 import com.minizin.travel.user.jwt.TokenProvider;
 import com.minizin.travel.user.oauth2.CustomSuccessHandler;
 import com.minizin.travel.user.service.CustomOAuth2UserService;
@@ -22,7 +23,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsUtils;
 
 import java.util.Collections;
-import java.util.List;
 
 @Slf4j
 @Configuration
@@ -34,6 +34,7 @@ public class SecurityConfig {
     private final CustomOAuth2UserService customOAuth2UserService;
     private final CustomSuccessHandler customSuccessHandler;
     private final TokenProvider tokenProvider;
+    private final JwtExceptionFilter jwtExceptionFilter;
 
     // BCryptPasswordEncoder Bean 등록
     @Bean
@@ -60,12 +61,13 @@ public class SecurityConfig {
                             CorsConfiguration configuration = new CorsConfiguration();
 
                             configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
-                            configuration.setAllowedMethods(List.of("POST", "PUT", "GET", "DELETE", "PATCH", "OPTIONS"));
+                            configuration.setAllowedMethods(Collections.singletonList("*"));
                             configuration.setAllowCredentials(true);
                             configuration.setAllowedHeaders(Collections.singletonList("*"));
                             configuration.setMaxAge(3600L);
 
-                            configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization"));
+                            configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
+                            configuration.setExposedHeaders(Collections.singletonList("Authorization"));
 
                             return configuration;
                         })
@@ -124,6 +126,9 @@ public class SecurityConfig {
         http
                 .addFilterBefore(new JwtAuthenticationFilter(tokenProvider),
                         LoginFilter.class);
+        //JWT 예외 핸들러 filter 등록
+        http
+                .addFilterBefore(jwtExceptionFilter, JwtAuthenticationFilter.class);
 
         //세션 설정 : STATELESS
         http
